--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content">
 
 
-        <com.google.android.material.imageview.ShapeableImageView
+        <ImageView
             android:id="@+id/imgPerfil"
             android:layout_width="120dp"
             android:layout_height="120dp"
