--- a/app/src/main/res/layout/item_contrato.xml
+++ b/app/src/main/res/layout/item_contrato.xml
@@ -6,18 +6,18 @@
     android:layout_marginVertical="8dp"
     android:layout_marginHorizontal="4dp"
     app:cardCornerRadius="16dp"
-    app:cardElevation="6dp"
-    app:strokeColor="@color/colorPrimary"
+    app:cardElevation="2dp"
+    app:strokeColor="@color/black"
     app:strokeWidth="1dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground"
+    android:backgroundTint="@color/colorBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
 
         <ImageView
             android:id="@+id/imgInmueble"
@@ -52,10 +52,11 @@
                 android:layout_marginTop="12dp"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/colorSecondary"
-                app:cornerRadius="50dp"
+                app:cornerRadius="12dp"
                 android:paddingHorizontal="24dp" />
         </LinearLayout>
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
+
 
